--- a/build
+++ b/build
@@ -2,6 +2,7 @@
 
 echo "Let us pretend that this is building something ... and takes 20 seconds"
 
+gem install bundle
 bundle install
 rails test
 bundle exec brakeman -z
