--- a/build
+++ b/build
@@ -2,8 +2,8 @@
 
 echo "Let us pretend that this is building something ... and takes 20 seconds"
 
-gem install bundle
-bundle install
+sudo gem install bundle
+sudo bundle install
 rails test
 bundle exec brakeman -z
 
